--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,7 @@ desc = "Kinship calculations; part of the OpenMendel project."
 uuid = "82a28c69-7afd-556c-aa99-b3efd3c23126"
 version = "0.5.0"
 license = "MIT"
-authors = ["Kenneth Lange", "Eric Sobel"]
+authors = ["Kenneth Lange <klange@ucla.edu>", "Eric Sobel <esobel@ucla.edu>", "OpenMendel Team"]
 keywords = ["OpenMendel", "kinship"]
 
 [deps]
