--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,9 @@ keywords = ["kinship", "pedigree analysis", "fisher transform"]
 version = "0.2.0"
 
 [deps]
-SnpArrays = "03306574-db42-5e83-a753-8b370e30c0ec"
+SnpArrays = "4e780e97-f5bf-4111-9dc4-b70aaf691b06"
+MendelBase = "4fb2d825-8540-5432-a3a3-b9ff66df2cb5"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
-Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
