--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,37 @@ language: julia
 os:
   - linux
   - osx
+  - windows 
 julia:
-  - 0.4
-  - 0.5
+  - 1.0
+  - 1.5
+  - nightly
+
 notifications:
-  email:
-    on_success: change
-    on_failure: always 
-  recipients:
-    - esobel@ucla.edu
-    
-install:
-  - julia -e 'ENV["PYTHON"]=""; Pkg.add("PyCall"); Pkg.build("PyCall")'
-  - julia -e 'Pkg.clone("https://github.com/OpenMendel/SnpArrays.jl.git")'
-  - julia -e 'Pkg.clone("https://github.com/OpenMendel/Search.jl.git")'
-  - julia -e 'Pkg.clone("https://github.com/OpenMendel/MendelBase.jl.git")'
+  email: false
+git:
+  depth: 99999999
+
+
+before_script: # install dependent unregistered packages
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'using Pkg; Pkg.add([PackageSpec(url="https://github.com/OpenMendel/SnpArrays.jl.git"), PackageSpec(url="https://github.com/OpenMendel/MendelSearch.jl.git"), PackageSpec(url="https://github.com/OpenMendel/MendelBase.jl.git")]);'
+
+after_script:
+  - julia -e 'using Pkg, MendelKinship; cd(joinpath(dirname(pathof(MendelKinship)), "..")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
+
+after_success:
+  # push coverage results to Coveralls
+  - julia -e 'cd(Pkg.dir("MendelKinship")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # push coverage results to Codecov
+  - julia -e 'cd(Pkg.dir("MendelKinship")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+# comment out old installation code for now
+# install:
+#   - julia -e 'ENV["PYTHON"]=""; Pkg.add("PyCall"); Pkg.build("PyCall")'
+#   - julia -e 'Pkg.clone("https://github.com/OpenMendel/SnpArrays.jl.git")'
+#   - julia -e 'Pkg.clone("https://github.com/OpenMendel/Search.jl.git")'
+#   - julia -e 'Pkg.clone("https://github.com/OpenMendel/MendelBase.jl.git")'
   
 # uncomment the following lines to override the default test script
 #script:
