--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ notifications:
 git:
   depth: 99999999
 
-
 before_script: # install dependent unregistered packages
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'using Pkg; Pkg.add([PackageSpec(url="https://github.com/OpenMendel/SnpArrays.jl.git"), PackageSpec(url="https://github.com/OpenMendel/MendelSearch.jl.git"), PackageSpec(url="https://github.com/OpenMendel/MendelBase.jl.git")]);'
@@ -27,6 +26,19 @@ after_success:
   - julia -e 'cd(Pkg.dir("MendelKinship")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("MendelKinship")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+jobs:
+  fast_finish: true
+  allow_failures:
+    - julia: nightly
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: osx
+      script:
+        - julia -e 'using Pkg; Pkg.add("Documenter")'
+        - julia -e 'using MendelKinship; include(joinpath(dirname(pathof(MendelKinship)), "..", "docs", "make.jl"))'
+      after_success: skip
 
 # comment out old installation code for now
 # install:
