--- a/Project.toml
+++ b/Project.toml
@@ -11,10 +11,10 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 MendelBase = "4fb2d825-8540-5432-a3a3-b9ff66df2cb5"
 MendelSearch = "4fa469e6-9890-5c68-874e-584f43f9cdde"
-ORCA = "47be7bcc-f1a6-5447-8b36-7eeeff7534fd"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 SnpArrays = "4e780e97-f5bf-4111-9dc4-b70aaf691b06"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 
 [compat]
 julia = "1.0"
