--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,8 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 
 [compat]
+CSV = "0.8"
+PlotlyJS = "0.18"
 julia = "1.0"
 
 [extras]
