--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 
 [compat]
 CSV = "0.8"
-DataFrames = "0.20"
+DataFrames = "0.20, 0.21, 0.22, 1"
 PlotlyJS = "0.18"
 StatsBase = "0.33"
 WebIO = "0.8"
